fix logo size on mobile

--- a/css/kimchi.css
+++ b/css/kimchi.css
@@ -77,6 +77,7 @@ h1, h2, h3, p {
 @media (max-width: 376px){
     #logo {
         margin-top: 4.5rem;
+        width: 130px;
        }
 }
 
